--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       }
     </style>
 
-    <title>Facebook-clone</title>
+    <title>Facebook</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
