--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
         font-family: "Roboto", sans-serif;
         margin: 0;
       }
+      body{
+        background: #121212;
+      }
     </style>
 
     <title>Facebook</title>
