--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
       * {
         font-family: "Roboto", sans-serif;
         margin: 0;
+        user-select: none;
       }
-      body{
-        background:#18191A;
+      body {
+        background: #18191a;
       }
     </style>
 
